config/operator/admission.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-mutate
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURaRENDQWt5Z0F3SUJBZ0lKQUpxYlYrTnBjeW5OTUEwR0NTcUdTSWIzRFFFQkN3VUFNRWN4Q3pBSkJnTlYKQkFZVEFrTk9NUXN3Q1FZRFZRUUlEQUpJUWpFTE1Ba0dBMVVFQ2d3Q1VVTXhIakFjQmdOVkJBTU1GV3QxWW1VdApaWFpsYm5SekxXRmtiV2x6YzJsdmJqQWVGdzB5TURBME1qUXdPRE16TUROYUZ3MDBOekE1TVRBd09ETXpNRE5hCk1FY3hDekFKQmdOVkJBWVRBa05PTVFzd0NRWURWUVFJREFKSVFqRUxNQWtHQTFVRUNnd0NVVU14SGpBY0JnTlYKQkFNTUZXdDFZbVV0WlhabGJuUnpMV0ZrYldsemMybHZiakNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUApBRENDQVFvQ2dnRU [...]
    service:
      name: $(ADMISSION_SERVICE_NAME)
      namespace: $(ADMISSION_SERVICE_NAMESPACE)
      path: /mutate-events-kubesphere-io-v1alpha1-rule
  failurePolicy: Fail
  name: mrule.kb.io
  rules:
  - apiGroups:
    - events.kubesphere.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - rules

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: admission-validate
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURaRENDQWt5Z0F3SUJBZ0lKQUpxYlYrTnBjeW5OTUEwR0NTcUdTSWIzRFFFQkN3VUFNRWN4Q3pBSkJnTlYKQkFZVEFrTk9NUXN3Q1FZRFZRUUlEQUpJUWpFTE1Ba0dBMVVFQ2d3Q1VVTXhIakFjQmdOVkJBTU1GV3QxWW1VdApaWFpsYm5SekxXRmtiV2x6YzJsdmJqQWVGdzB5TURBME1qUXdPRE16TUROYUZ3MDBOekE1TVRBd09ETXpNRE5hCk1FY3hDekFKQmdOVkJBWVRBa05PTVFzd0NRWURWUVFJREFKSVFqRUxNQWtHQTFVRUNnd0NVVU14SGpBY0JnTlYKQkFNTUZXdDFZbVV0WlhabGJuUnpMV0ZrYldsemMybHZiakNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUApBRENDQVFvQ2dnRU [...]
    service:
      name: $(ADMISSION_SERVICE_NAME)
      namespace: $(ADMISSION_SERVICE_NAMESPACE)
      path: /validate-events-kubesphere-io-v1alpha1-rule
  failurePolicy: Fail
  name: vrule.kb.io
  rules:
  - apiGroups:
    - events.kubesphere.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - rules
---
apiVersion: v1
kind: Service
metadata:
  name: admission
  namespace: system
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    app: $(OPERATOR_NAME)
